--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.14.0",
     "autoprefixer": "10.4.14",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.0"
   }
 }
