--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
