--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1"
   },
